# saltendurlshortener

./: Cargo.toml  README.MD
migrations/: 20231110170849_urlshortener.sql
src/: lib.rs  main.rs
src/commands/: mod.rs
