[package]
name = "saltendurlshortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
libsql-client = "0.32.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
teloxide = { version="0.12.2", features = ["macros"] }
tokio = { version="1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
url = "2.4.1"
