[package]
name = "saltendurlshortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
nanoid = "0.4.0"
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
shuttle-secrets = "0.32.0"
shuttle-shared-db = { version="0.32.0", features = ["postgres-rustls"] }
sqlx = "0.7.2"
teloxide = { version="0.12.2", features = ["macros"] }
tokio = { version="1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
url = "2.4.1"
